# CYPHER_PROTOCOL

./: LICENSE  README.md  pyproject.toml
CYPHER_PROTOCOL/CYPHER_CLIENT/: cypher_client.py
CYPHER_PROTOCOL/CYPHER_CLIENT/FTP/: ftp_client.py
CYPHER_PROTOCOL/CYPHER_SERVER/: cypher_server.py
CYPHER_PROTOCOL/CYPHER_SERVER/FTP/: ftp_server.py
TEST_SCRIPTS/FTP_TEST/: ftp_client.py  ftp_server.py
TEST_SCRIPTS/PING_SPEEDTEST/: client.py  server.py
