[build-system]
requires = ["setuptools<=64.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cypher_protocol_P-Y-R-O-B-O-T"
version = "1.1.0"
description = "A COMMUNICATION PROTOCOL FOR COMPUTERS TO COMMUNICATE THROUGH A SAFE CHANNEL"
readme = "README.md"
authors = [{name =  "KUSHAL", email = "NONE@NONE.com"}]
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = ["protocol", "comminication", "tcp", "http Alternative",
			"cypher", "cypher_protocol", "networking", "newwork",
			"network programming", "multithreaded", "server", "client",
			"multithreading"
			]
dependencies = ["cryptography"]

[project.urls]
Homepage = "https://github.com/P-Y-R-O-B-O-T/CYPHER_PROTOCOL"
